--- a/blueberries.html
+++ b/blueberries.html
@@ -27,3 +27,5 @@
     <img src="images/blueberries.jpg" alt="">
   </figure>
 
+  <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as <q>blueberries</q> and are native to North America.</p>
+
