--- a/blueberries.html
+++ b/blueberries.html
@@ -29,3 +29,9 @@
 
   <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as <q>blueberries</q> and are native to North America.</p>
 
+  <footer>
+    <p>© Berries.</p>
+  </footer>
+
+</body>
+</html>
