--- a/grapes.html
+++ b/grapes.html
@@ -8,3 +8,15 @@
   <link href="https://fonts.googleapis.com/css?family=Georgia" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
+<body>
+  <header>
+    <h1>Berries</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Blueberries</a></li>
+        <li><a href="#">Grapes</a></li>
+        <li><a href="#">Red Currants</a></li>
+      </ul>
+    </nav>
+  </header>
