--- a/grapes.html
+++ b/grapes.html
@@ -26,3 +26,6 @@
   <figure>
     <img src="images/grapes.jpg" alt="">
   </figure>
+
+  <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
+
