Add a main element

--- a/blueberries.html
+++ b/blueberries.html
@@ -21,7 +21,9 @@
     </nav>
   </header>
 
-  <h2>Blueberries</h2>
+  <main>
+    <h2>Blueberries</h2>
+  </main>
 
   <figure>
     <img src="images/blueberries.jpg" alt="">
