--- a/grapes.html
+++ b/grapes.html
@@ -21,7 +21,9 @@
     </nav>
   </header>
 
-  <h2>Grapes</h2>
+  <main>
+    <h2>Grapes</h2>
+  </main>
 
   <figure>
     <img src="images/grapes.jpg" alt="">
