--- a/red-currants.html
+++ b/red-currants.html
@@ -21,7 +21,9 @@
     </nav>
   </header>
 
-  <h2>Red currants</h2>
+  <main>
+    <h2>Red currants</h2>
+  </main>
 
   <figure>
     <img src="images/red-currants.jpg" alt="">
