--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </nav>
   </header>
 
-  <h2>Berries, berries, oh my!</h2>
+  <main>
+    <h2>Berries, berries, oh my!</h2>
+  </main>
 
   <p>In everyday English, <q>berry</q> is a term for any small edible fruit. These <q>berries</q> are usually <b>juicy</b>, <b>round</b>, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
 
