--- a/blueberries.html
+++ b/blueberries.html
@@ -32,7 +32,7 @@
   <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as <q>blueberries</q> and are native to North America.</p>
 
   <footer>
-    <p>© Berries.</p>
+    <small>© Berries.</small>
   </footer>
 
 </body>
