--- a/grapes.html
+++ b/grapes.html
@@ -32,7 +32,7 @@
   <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
 
   <footer>
-    <p>© Berries.</p>
+    <small>© Berries.</small>
   </footer>
 
 </body>
