--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <p>In everyday English, <q>berry</q> is a term for any small edible fruit. These <q>berries</q> are usually <b>juicy</b>, <b>round</b>, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
 
   <footer>
-    <p>© Berries.</p>
+    <small>© Berries.</small>
   </footer>
 
 </body>
