--- a/red-currants.html
+++ b/red-currants.html
@@ -32,7 +32,7 @@
   <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
 
   <footer>
-    <p>© Berries.</p>
+    <small>© Berries.</small>
   </footer>
 
 </body>
