Add a strong element

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2>Berries, berries, oh my!</h2>
   </main>
 
-  <p>In everyday English, <q>berry</q> is a term for any small edible fruit. These <q>berries</q> are usually <b>juicy</b>, <b>round</b>, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+  <p>In everyday English, <q>berry</q> is a term for any <strong>small edible fruit.</strong> These <q>berries</q> are usually <b>juicy</b>, <b>round</b>, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
 
   <footer>
     <small>© Berries.</small>
