Change margin bottom values

--- a/blueberries.html
+++ b/blueberries.html
@@ -22,14 +22,14 @@
   </header>
 
   <main>
-    <h2>Blueberries</h2>
+    <h2 class="blueberries">Blueberries</h2>
   </main>
 
   <figure>
     <img src="images/blueberries.jpg" alt="">
   </figure>
 
-  <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as <q>blueberries</q> and are native to North America.</p>
+  <p class="blueberries-par">Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as <q>blueberries</q> and are native to North America.</p>
 
   <footer>
     <small>© Berries.</small>
