--- a/red-currants.html
+++ b/red-currants.html
@@ -22,14 +22,14 @@
   </header>
 
   <main>
-    <h2>Red currants</h2>
+    <h2 class="red-currants">Red currants</h2>
   </main>
 
   <figure>
     <img src="images/red-currants.jpg" alt="">
   </figure>
 
-  <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
+  <p class="red-par">With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
 
   <footer>
     <small>© Berries.</small>
