--- a/grapes.html
+++ b/grapes.html
@@ -22,14 +22,14 @@
   </header>
 
   <main>
-    <h2>Grapes</h2>
+    <h2 class="grapes">Grapes</h2>
   </main>
 
   <figure>
     <img src="images/grapes.jpg" alt="">
   </figure>
 
-  <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
+  <p class="grapes-par">Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
 
   <footer>
     <small>© Berries.</small>
